made a shit ton of changes

--- a/duty-matcher-master/www2/index.html
+++ b/duty-matcher-master/www2/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav>
             <div class="nav-wrapper blue">
-                <a href="#" class="brand-logo center">audio_new</a>
+                <a href="#" class="brand-logo center">text_to_audio</a>
             </div>
         </nav>
 
@@ -46,9 +46,9 @@
                   <table class="centered assignments">
                       <thead>
                         <tr>
-                            <!-- <th>Duty</th>
-                            <th>Brother</th>
-                            <th></th> -->
+                            <th>Before Translation</th>
+                            <th>Translation</th>
+                            <th></th>
                         </tr>
                       </thead>
 
@@ -74,6 +74,6 @@
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script type="text/javascript" src="scripts.js"></script>
+        <script type="text/javascript" src="www2/scripts.js"></script>
     </body>
 </html>
