--- a/duty-matcher-master/www2/index.html
+++ b/duty-matcher-master/www2/index.html
@@ -41,13 +41,13 @@
           </div>
           <div class="row">
               <div class="col s12 m12 section center-align" style="margin-bottom: 20px">
-                  <h5>Translation</h5>
+                  <h5>Listening...</h5>
                   
                   <table class="centered assignments">
                       <thead>
                         <tr>
-                            <th>Before Translation</th>
-                            <th>Translation</th>
+                            <!-- <th>Before Translation</th>
+                            <th>Translation</th> -->
                             <th></th>
                         </tr>
                       </thead>
